# MotionDetection

./: .gitignore  CMakeLists.txt  LICENSE  MotionDetection.pro  README.md  actionrecognition.cpp  actionrecognition.h  common.h  createVSproject.bat  headlayer.h  interface.cpp  interface.h  main.cpp  motionclassification.cpp  motionclassification.h  motiondetection.cpp  motiondetection.h  motionproposal.cpp  motionproposal.h  objectdetection.cpp  objectdetection.h  objecttrack.cpp  objecttrack.h
include/: actionrecognition.h  common.h  interface.h  log.h  motionclassification.h  motiondetection.h  motionproposal.h  objectdetection.h  objecttrack.h
mtcnn/: caffeplus.cpp  caffeplus.h  eigenplus.cpp  eigenplus.h  mtcnn.cpp  mtcnn.h  nms.cpp  nms.h
src/: actionrecognition.cpp  interface.cpp  log.cpp  main.cpp  motionclassification.cpp  motiondetection.cpp  motionproposal.cpp  objectdetection.cpp  objecttrack.cpp
test/: interface.h  main.cpp  test.pro
